monitoring/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    # app: grafana
    app.kubernetes.io/name: grafana-deployment
  name: grafana
  namespace: monitoring
spec:
  # replicas: 1
  selector:
    matchLabels:
      # app: grafana
      app.kubernetes.io/name: grafana-deployment
  template:
    metadata:
      labels:
        app: grafana
        app.kubernetes.io/name: grafana-deployment
    spec:
      containers:
      - image: grafana/grafana:latest
        name: grafana
        ports:
        - containerPort: 3000
          name: grafana-http
        readinessProbe:
          httpGet:
            path: /api/health
            port: grafana-http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
      # nodeSelector:
        # node-type: worker
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-claim-auto
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: grafana-http
