monitoring/prometheus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-server
spec:
  # replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            # - name: prometheus-storage-volume
            #   mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
  
        # - name: prometheus-storage-volume
        #   emptyDir: {}

# kubectl port-forward pod/prometheus-deployment-5f7687766d-bl4m9 8080:9090 -n monitoring
# https://devopscube.com/setup-prometheus-monitoring-on-kubernetes/
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: prometheus-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090

# http://prometheus-svc.monitoring.svc.cluster.local
